<resources>
    <string name="app_name">Aula ATM Consultoria</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ATM Consultoria</string>
    <string name="nav_header_subtitle">atmconsultoria@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_principal">Principal</string>
    <string name="menu_servicos">Serviços</string>
    <string name="menu_clientes">Clientes</string>
    <string name="menu_tools">excluir esta oção</string>
    <string name="menu_contato">Contato</string>
    <string name="menu_sobre">Sobre</string>


    <string name="servicos_titulo1">Sistema de Gestão de Qualidade</string>
    <string name="servicos_texto1">Qualidade é uma responsabilidade de todos os níveis da organização. Ao implementar um sistema de gestão da qualidade, a empresa se prepara melhor para gerenciar os riscos relacionados à qualidade. Existem várias normas e padrões para medir a qualidade, como a ISO 9001, ISO 14001, ISO 18001, ISO 31000, certificação ONA e outras.</string>
    <string name="servicos_titulo2">Indicadores de desempenho</string>
    <string name="servicos_texto2">A definição e análise de indicadores permitem avaliar o desempenho da organização de acordo com as metas estabelecidas, possibilitando seu acompanhamento e permitindo que sejam feitas as adequações necessárias para atingir os resultados desejados.</string>
    <string name="clientes_titulo1">Clientes</string>
    <string name="clientes_texto1">Em mais de 15 anos de existência a ATM acumula experiência e know how em empresas nacionais e multinacionais, de diversos portes, em vários segmentos, em todo território nacional.</string>
    <string name="clientes_1">3M</string>
    <string name="clientes_2">Netflix</string>
    <string name="clientes_3">Mercado Livre</string>
    <string name="clientes_4">Rappi</string>

</resources>
